User seeder fix